# python-docs-bootstrapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pre-commit.yaml  tests.yaml
bootstrapper/: __init__.py  bootstrapper.py
bootstrapper/data/: .gitignore  Makefile  README.md
data/: Makefile  README.md
