[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "python-docs-bootstrapper"
description = "Bootstrapper for Python documentation translations"
readme = "README.md"
keywords = [
  "automation",
  "CLI",
  "documentation",
  "i18n",
  "python-docs",
  "sphinx",
  "translation",
  "utilities",
]
license = {text = "MIT"}
authors = [{name = "egeakman", email = "me@egeakman.dev"}]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "sphinx",
]
[project.urls]
Homepage = "https://github.com/egeakman/python-docs-bootstrapper"
Issues = "https://github.com/egeakman/python-docs-bootstrapper/issues"
Releases = "https://github.com/egeakman/python-docs-bootstrapper/releases"
[project.scripts]
bootstrapper = "bootstrapper.bootstrapper:main"

[tool.hatch.build]
packages = ["bootstrapper"]
isolated = true

[tool.hatch.build.force-include]
"data" = "python-docs-bootstrapper-data"

[tool.hatch.version]
path = "bootstrapper/__init__.py"

[tool.isort]
profile = "black"
known_first_party = "bootstrapper"
